pkg/gateway/xds/translator/testdata/out/xds-ir/http-route-request-headers.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: request-header-route
      requestHeadersToAdd:
      - header:
          key: some-header
          value: some-value
      - header:
          key: some-header-2
          value: some-value
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: some-header3
          value: some-value
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: some-header4
          value: some-value
      - appendAction: OVERWRITE_IF_EXISTS_OR_ADD
        header:
          key: empty-header
        keepEmptyValue: true
      requestHeadersToRemove:
      - some-header5
      - some-header6
      route:
        cluster: request-header-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/request-header-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
